# hackathon-dj-template

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  tool.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml  create_swagger_file.yml  generate_coverage_report.yml
environments/development/: Dockerfile  entrypoint.sh
environments/development/commands/: createsuperuser.sh  logs.sh  makemigrations.sh  migrate.sh  shell.sh  test.sh
environments/development/nginx/: nginx.conf
webapp/: manage.py
webapp/api/v1/: apps.py  urls.py
webapp/api/v1/health_check/: apps.py  urls.py
webapp/api/v1/health_check/serializers/: __init__.py  health_check_serializer.py
webapp/api/v1/health_check/tests/: test_health_check_api_view.py
webapp/api/v1/health_check/views/: __init__.py  health_check_api_view.py
webapp/api/v1/users/: apps.py
webapp/api/v1/users/serializers/: __init__.py  jwt_serializer.py  social_account_serializer.py  user_detail_serializer.py
webapp/api/v1/users/views/: base_user_api_view.py
webapp/common/exceptions/: base_api_exception.py  common_error_code.py  exception_handler.py  forbidden_error.py  internal_server_error.py  not_found_error.py  unauthorized_error.py  validation_error.py
webapp/common/middlewares/: __init__.py  camel_case_middleware.py
webapp/common/models/: __init__.py  base_model.py
webapp/common/pagination/: __init__.py  standard_pagination.py
webapp/common/utils/: datetime.py
webapp/common/views/: __init__.py  base_api_view.py  base_viewset.py
webapp/config/: asgi.py  celery.py  urls.py  wsgi.py
webapp/config/settings/: base.py  development.py  production.py
webapp/users/admin/: __init__.py  user_admin.py
webapp/users/migrations/: 0001_initial.py
webapp/users/models/: __init__.py  user.py
