[project]
name = "hackathon-dj-template"
version = "0.1.0"
description = "Django Hackathon Template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
]

[tool.ruff]
# Target Python 3.12+
target-version = "py312"
line-length = 120
indent-width = 4

# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DJ",     # flake8-django
    "UP",     # pyupgrade
    "S",      # bandit
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PIE",    # flake8-pie
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "ISC",    # flake8-implicit-str-concat
]

# Exclude specific rules
ignore = [
    "E203",   # whitespace before ':'
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert
    "S105",   # hardcoded password
    "S106",   # hardcoded password
    "S107",   # hardcoded password
    "DJ001",  # avoid using null=True on string-based fields
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*/migrations/*",
    "staticfiles",
    "media",
    "node_modules",
]

[tool.ruff.per-file-ignores]
# Allow certain rules in specific files
"*/settings/*.py" = ["S105", "S106", "S107"]  # Allow hardcoded passwords in settings
"*/migrations/*.py" = ["E501", "F401", "F841"]  # Ignore line length and imports in migrations
"**/tests/**/*.py" = ["S101", "ARG001", "ARG002"]  # Allow assert in tests
"manage.py" = ["T201"]  # Allow print in manage.py

[tool.ruff.isort]
known-first-party = ["webapp", "config", "common"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
strict_optional = false
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_generics = false

# Django configuration
[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.mypy_django_plugin]
ignore_missing_model_attributes = true

# Exclude certain files from mypy checking
[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "manage",
]
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "*/migrations/*"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process_args

[tool.coverage.run]
source = ["webapp"]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
